# MemoryCore

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.claude/: .gitignore  port_config.json
docs/: architecture.md  review-junovera-integration.md
examples/: README.md  basic_usage.py  example.rs  per_user_assistant.py  smk_assistant.py
memory_core/: __init__.py  config.py
memory_core/core/: __init__.py  interfaces.py  models.py  system.py
memory_core/indexing/: assistant_index.py  rust_index.py
memory_core/storage/: __init__.py  database.py  ltm_store.py  settings.py  stm_store.py  working_mem.py
memory_core/types/: smk_features.py  smk_types.py
memory_core_py/: __init__.py  config.py
memory_core_py/core/: __init__.py  interfaces.py  models.py  system.py
memory_core_py/indexing/: __init__.py  assistant_index.py  rust_index.py
memory_core_py/storage/: __init__.py  database.py  ltm_store.py  settings.py  stm_store.py  working_mem.py
memory_core_py/types/: __init__.py  smk_features.py
src/: lib.rs  smk_index.rs
tests/: conftest.py  test_config.py  test_models.py  test_native.py  test_rust_engine.py  test_settings.py  test_smk.py  test_storage.py  test_system.py  test_working_memory.py
