[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "memory_core"
version = "0.1.0"
description = "Rust-based memory engine for AI, exposed to Python via PyO3"
requires-python = ">=3.12"
authors = [
  { name = "Justin" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
]
dependencies = [
    "numpy>=2.3.4",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.6",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.44",
    "mysql-connector-python>=9.4.0",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.10.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=0.24",
    "matplotlib>=3.10.7",
]
postgres = [
    "psycopg[binary]>=3.2.0",
]
ai = [
    "pydantic-ai>=0.9",
]

[tool.maturin]
module-name = "memory_core"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
