[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "memory_core"
version = "0.2.0"
description = "Rust-backed memory engine for AI assistants: SQL persistence, in-RAM vector search"
requires-python = ">=3.12"
authors = [
  { name = "Justin" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
]
dependencies = [
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.10.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=0.24",
]
postgres = [
    "psycopg[binary]>=3.2.0",
]
ai = [
    "pydantic-ai>=0.9",
]

[tool.maturin]
# Mixed Rust/Python layout: the `memory_core/` package at the repo root is the
# Python layer; the compiled extension is mounted inside it as `memory_core._native`.
module-name = "memory_core._native"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff.lint.flake8-type-checking]
# Pydantic and SQLAlchemy evaluate annotations at runtime; never let the TC rules
# move their imports behind TYPE_CHECKING (see docs/review-junovera-integration.md).
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic_settings.BaseSettings",
    "sqlalchemy.orm.DeclarativeBase",
]
